<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/welcomes"
            android:text="@string/welcome"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"/>

    <include
            layout="@layout/app_bar_home_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/nav_header_home_page"
            app:menu="@menu/activity_home_page_drawer"/>

</android.support.v4.widget.DrawerLayout>
