...
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="report">risoluzione problemi</string>>

    //VediProfilo
    <string name="immprofilo">vedi dati utente</string>

    //Help
    <string name="soggetto">argomento del problema</string>
...
